# agentrun-cli

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README_zh.md  agentrun.spec  agentruntime.yaml  pyproject.toml  superagent.yaml
.github/workflows/: ci.yml  release.yml
docs/en/: config.md  index.md  model.md  runtime-yaml.md  runtime.md  sandbox.md  skill.md  super-agent.md  sync-skills.md  tool.md
docs/zh/: config.md  index.md  model.md  runtime-yaml.md  runtime.md  sandbox.md  skill.md  super-agent.md  sync-skills.md  tool.md
scripts/: bench-startup.sh  build-binary.sh  install.ps1  install.sh
src/agentrun_cli/: __init__.py  main.py
src/agentrun_cli/_utils/: agentruntime_yaml.py  cloud_build.py  config.py  error.py  inner_client.py  output.py  runtime_constants.py  runtime_reconciler.py  runtime_render.py  runtime_state.py  super_agent_picker.py  super_agent_render.py  super_agent_repl.py  super_agent_state.py  super_agent_yaml.py
src/agentrun_cli/commands/: config_cmd.py  model_cmd.py  skill_cmd.py  sync_skills_cmd.py  tool_cmd.py
src/agentrun_cli/commands/runtime/: __init__.py  _helpers.py  apply_cmd.py  cloud_build_cmd.py  crud_cmd.py  delete_cmd.py  render_cmd.py  status_cmd.py
src/agentrun_cli/commands/sandbox/: __init__.py  _helpers.py  browser_cmd.py  context_cmd.py  exec_cmd.py  file_cmd.py  lifecycle_cmd.py  process_cmd.py  template_cmd.py
src/agentrun_cli/commands/super_agent/: __init__.py  _helpers.py  apply_cmd.py  chat_cmd.py  conv_cmd.py  crud_cmd.py  invoke_cmd.py  run_cmd.py
tests/integration/: test_cli_basic.py  test_config_cmd.py  test_install_script.py  test_main.py  test_model_cmd.py  test_runtime_cmd.py  test_sandbox_cmd.py  test_skill_cmd.py  test_super_agent_apply_cmd.py  test_super_agent_chat_cmd.py  test_super_agent_conv_cmd.py  test_super_agent_crud_cmd.py  test_super_agent_invoke_cmd.py  test_super_agent_run_cmd.py  test_sync_skills_cmd.py  test_tool_cmd.py
tests/unit/: test_cloud_build.py  test_config.py  test_error.py  test_error_runtime_extension.py  test_main.py  test_model_helpers.py  test_output.py  test_runtime_apply_e2e.py  test_runtime_constants.py  test_runtime_helpers.py  test_runtime_reconciler.py  test_runtime_render.py  test_runtime_state.py  test_runtime_yaml.py  test_sandbox_helpers.py  test_skill_cmd.py  test_super_agent_helpers.py  test_super_agent_picker.py  test_super_agent_render.py  test_super_agent_repl.py  test_super_agent_state.py  test_super_agent_yaml.py  test_sync_skills_cmd.py  test_tool_cmd.py
